; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genautomata.c_transform_regexp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genautomata.c_transform_regexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@transform_1 = common dso_local global i32 0, align 4
@regexp_transformed_p = common dso_local global i64 0, align 8
@transform_2 = common dso_local global i32 0, align 4
@transform_3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @transform_regexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @transform_regexp(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @transform_1, align 4
  %5 = call i32 @regexp_transform_func(i32 %3, i32 %4)
  store i32 %5, i32* %2, align 4
  br label %6

6:                                                ; preds = %13, %1
  store i64 0, i64* @regexp_transformed_p, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @transform_2, align 4
  %9 = call i32 @regexp_transform_func(i32 %7, i32 %8)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @transform_3, align 4
  %12 = call i32 @regexp_transform_func(i32 %10, i32 %11)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %6
  %14 = load i64, i64* @regexp_transformed_p, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %6, label %16

16:                                               ; preds = %13
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @regexp_transform_func(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
